css/styles.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-top: 1rem;
  color: #5a5a5a;
}


/* NAVBAR
-------------------------------------------------- */

.blur-nav {
  font-family: 'Quicksand', sans-serif;
  letter-spacing: +.05rem;
  background-color: rgba(0, 0, 0, 0.754);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}
.blur-nav a {
  color: #a7a7a7;
  transition: color .15s ease-in-out;
}
.blur-nav a:hover {
  color: #fff;
  text-decoration: none;
}

.dropdown-item:hover {
  background-color:#00000070;
}

/* MARKETING CONTENT
-------------------------------------------------- */

main {
  margin-top: 5.45rem;
}

#hero {
  background-repeat: no-repeat;
  background-position: center;
  height: auto;
  max-width: 100%;
  background-size: 100%;
  
  text-shadow: 2px 2px 8px #000000;
  margin-left: 1rem;
  margin-right: 1rem;
}

.hero-text {
  margin-top: 20rem;
  margin-bottom: 20rem;
}
.hero-text a {
  margin-top: 1.5rem;
  background-color: rgba(0, 0, 0, 0.275);
}

.hero-text a:hover {
  color:#000000;
}

/* Center align the text within the three columns below the hero */
.marketing .col-lg-4 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  text-align: center;
}
/* rtl:begin:ignore */
.marketing .col-lg-4 p {
  margin-right: .75rem;
  margin-left: .75rem;
}
/* rtl:end:ignore */

.section-title {
  margin-bottom: 5rem;
  color: black;
  text-align: center;
  position: relative;
  text-transform: uppercase;
  padding-bottom: 20px;
  max-width: 720px;
  margin-right: auto;
  margin-left: auto
}

.section-title::after {
  content: "";
  border-bottom: 3px solid #010101;
  position: absolute;
  width: 80px;
  bottom: 0px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -o-transform: translateX(-50%);
  transform: translateX(-50%);
  -webkit-transition: width ease-out 2s;
  -moz-transition: width ease-out 2s;
  transition: width ease-out 2s
}


/* FEATURETTES
-------------------------------------------------- */

.featurette-divider {
  margin-top: 2rem;
  margin-bottom: 5rem; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
/* rtl:begin:remove */
.featurette-heading {
  font-family: 'Lato', sans-serif;
  letter-spacing: -.05rem;
}

/* rtl:end:remove */

/* CONTACT BANNER
-------------------------------------------------- */

#contact-banner {
  background-repeat: no-repeat;
  background-position: center bottom;
  background-size: cover;
  text-shadow: 2px 2px 8px #000000;
  background-color: rgba(0, 0, 0, 0.404);
  background-blend-mode: multiply;
}

.contact-snippet {
  background-color: rgba(123, 123, 123, 0.47);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}

.contact-snippet a {
  letter-spacing: +.1rem;
  color: #ffffff;
  text-decoration: none;
  transition: color .15s ease-in-out;
}
.contact-snippet a:hover {
  color: #a7a7a7;
  text-decoration: underline;
}

input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
  font-size: 0.75em;
  color: rgb(255, 255, 255);
  top: -5px;
  -webkit-transition: all 0.225s ease;
  transition: all 0.225s ease;
}

.styled-input {
  float: left;
  width: 293px;
  margin: 1rem 0;
  position: relative;
}

.styled-input label {
  color: rgb(255, 255, 255);
  padding: 1.3rem 30px 1rem 30px;
  position: absolute;
  top: 10px;
  left: 0;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  pointer-events: none;
}

.styled-input.wide { 
  width: 650px;
  max-width: 100%;
}

input, textarea {
  padding: 30px;
  border: 0;
  width: 100%;
  font-size: 1rem;
  background-color: rgba(123, 123, 123, 0.47);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
  color: white;
}

input:focus, textarea:focus { 
  outline: rgba(255, 255, 255, 0.705) solid 2px; 
}

input:focus ~ span, textarea:focus ~ span {
  width: 100%;
  -webkit-transition: all 0.075s ease;
  transition: all 0.075s ease;
}

textarea {
  width: 100%;
  min-height: 15em;
}

.input-container {
  width: 650px;
  max-width: 100%;
  margin: 20px auto 25px auto;
}

.submit-btn {
  float: right;
  padding: 7px 35px;
  background-color: rgba(123, 123, 123, 0.47);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
  border: 2px solid rgba(255, 255, 255, 0.705);
  color: white;
  font-size: 18px;
  cursor: pointer;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
            0 2px 10px 0 rgba(0,0,0,0.07);
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
}

.submit-btn:hover {
  transform: translateY(3px);
  background-color: rgba(64, 64, 64, 0.47);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
            0 1px 1px 0 rgba(0,0,0,0.09);
}

input[type=checkbox] + label {
color: #ccc;
font-style: italic;
} 

input[type=checkbox]:checked + label {
color: #f00;
font-style: normal;
}


/* FOOTER
-------------------------------------------------- */

.footer {
  background-color: rgba(0, 0, 0, 0.754);
}

.social-icons > a {
  color:#fff;
}

.foot-decal {
  width: 15%;
}


/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 40em) {

  .featurette-heading {
    font-size: 40px;
  }
}

@media only screen and (max-width: 1400px) {
  .foot-decal {
    width: 20%;
  }

}

@media only screen and (max-width: 1200px) {

  #hero {
    background-size: 150%;
    margin-left: 0rem;
    margin-right: 0rem;
  }

  .f-content {
    margin-top: 2rem;
    margin-bottom: 2rem;
  }

  .featurette-divider {
    margin-top: 2rem;
    margin-bottom: 2rem; 
  }

  .foot-decal {
    width: 35%;
  }
}

@media only screen and (max-width: 992px) {
  
  nav > div.container-fluid {
    text-align: center;
  }
  
  .hero-text {
    margin-top: 10rem;
    margin-bottom: 10rem;
  }

}

@media only screen and (max-width: 768px) {

  .hero-text {
    margin-top: 7rem;
    margin-bottom: 7rem;
  }

  .tagline_mobile {
    transform: scale(0.75);
  }
  
  .styled-input {
    width:100%;
  }

  .submit-btn {
    width:100%;
    float: none;
    text-align:center;
  }

  .foot-decal {
    width: 60%;
  }

}

@media only screen and (max-width: 576px) {

  .hero-text {
    margin-top: 3.5rem;
    margin-bottom: 3.5rem;
  }

  .tagline_mobile {
    transform: scale(0.5);
  }

  .foot-decal {
    width: 75%;
  }

}

